# disney-fireworks-scraper

./: .editorconfig  .gitignore  Dockerfile  app.py  compose.yml  flake.nix  module-caldav.nix  module-google.nix  module.nix  package.nix  pyproject.toml  requirements.txt  scraper.py  setup.cfg  setup.py  shell.nix
src/: caldav_calendar.py  google_calendar.py
src/disney_fireworks_scraper/: caldav_calendar.py  google_calendar.py  scraper.py
