[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "disney_fireworks_scraper"
version = "0.0.1"
description = "Tool for scraping Disney World Fireworks showtimes"
requires-python = ">=3.10"
dependencies = [
  "selenium==4.25.0",
  "caldav==1.3.9",
  "xvfbwrapper==0.2.9",
]

[project.scripts]
disney-fireworks-caldav = "disney_fireworks_scraper.caldav_calendar:main"

[tool.basedpyright]
typeCheckingMode = "standard"
