[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "disney_fireworks_scraper"
version = "0.1.0"
description = "Tool for scraping Disney World Fireworks showtimes"
requires-python = ">=3.10"
dependencies = [
  "selenium==4.25.0",
  "xvfbwrapper==0.2.9",
  # TODO: Use feature flags or package splitting to enable these selectively
  "caldav==1.3.9",
  "google-api-python-client==2.161.0",
]

[project.scripts]
disney-fireworks-caldav = "disney_fireworks_scraper.caldav_calendar:main"
disney-fireworks-google = "disney_fireworks_scraper.google_calendar:main"

[tool.basedpyright]
typeCheckingMode = "standard"
